<resources>
    <string name="app_name">Animals Quiz</string>

    <!-- ANIMALS -->
    <string name="wolf">Wolf</string>
    <string name="fox">Fox</string>
    <string name="jaguar">Jaguar</string>
    <string name="goat">Goat</string>
    <string name="cow">Cow</string>
    <string name="horse">Horse</string>
    <string name="hedgehog">Hedgehog</string>
    <string name="porcupine">Porcupine</string>
    <string name="seashell">Seashell</string>
    <string name="whale">Whale</string>
    <string name="bee">Bee</string>
    <string name="worm">Worm</string>

    <!-- QUESTIONS -->
    <string name="please_select_the">Please select the</string>
    <string name="please_enter_the_animal_title">Please enter the animal title</string>
    <string name="highly_developed_predators">highly developed predators</string>
    <string name="highly_developed_herbivores">highly developed herbivores</string>
    <string name="horned">horned animals</string>
    <string name="prickly">prickly animals</string>
    <string name="sea">sea creatures</string>
    <string name="insects">insects</string>
    <string name="feline">feline animal</string>
    <string name="flying">flying creature</string>
    <string name="jewelry">jewelry creature</string>
    <string name="riding">riding animal</string>
    <string name="the_biggest">biggest creature</string>
    <string name="the_smallest">smallest creature</string>

    <!-- STAGES -->
    <string name="stage_1">1</string>
    <string name="stage_2">2</string>
    <string name="stage_3">3</string>
    <string name="stage_4">4</string>
    <string name="stage_5">5</string>

    <!-- OPTIONS -->
    <string name="option_A">A</string>
    <string name="option_B">B</string>
    <string name="option_C">C</string>
    <string name="option_D">D</string>

    <!-- BUTTONS -->
    <string name="restart">Restart</string>
    <string name="submit">Submit</string>

    <!-- EDIT TEXT DEFAULT -->
    <string name="animal_the_great">Animal the great!</string>

    <!-- TOAST RESULT -->
    <string name="quiz_completed">Quiz completed. </string>
    <string name="result_perfect">Perfect result for now!</string>
    <string name="result_not_perfect">You could do better. Your result is: </string>
    <string name="result_sad">Sad, but still all wrong :(</string>
    <string name="please_provide_answer">Please provide answer</string>
</resources>
